tooling/nargo_cli/tests/compile_failure/dup_trait_items_5/src/main.nr
trait MyTrait {
  fn MyItem();
  let MyItem: u32;
}

fn main() {
}
